= 4.7.71 - TBD =
Changed: Enqueue welcome banner assets only on the welcome page ( [#1153](https://github.com/WPChill/download-monitor/issues/1153) )

= 4.7.70 - 12.12.2022 =
Fixed: Aditional CSS classes for gutenberg blocks ( [#1146](https://github.com/WPChill/download-monitor/issues/1146) )
Changed: Removed test paymant gateway as PayPal gateway already has a test solution ( [#666](https://github.com/WPChill/download-monitor/issues/666) )
Changed: De-prioritize the "DLM Protect file" buttin in Media Library single view ( [#1132](https://github.com/WPChill/download-monitor/issues/1132) )
Added: Quick copy download link in admin Downloads table ( [#1148](https://github.com/WPChill/download-monitor/issues/1148) )
Fixed: Reports download date not being displayed correctly based on time zone ( [#1149](https://github.com/WPChill/download-monitor/issues/1149) )
Fixed: Dashboard widget bugged if manual downloads are removed with filter ( [#1151](https://github.com/WPChill/download-monitor/issues/1151) )

= 4.7.60 - 05.12.2022 =
Fix: No access logs as redirect ( [#1143](https://github.com/WPChill/download-monitor/issues/1143) )
Added: Action hook for extensions to hook on Reports page ( [#1140](https://github.com/WPChill/download-monitor/issues/1140) )
Added: Order top downloads by title ( [#1138](https://github.com/WPChill/download-monitor/issues/1138) )
Fix: No access logging still present ( [#1139](https://github.com/WPChill/download-monitor/issues/1139) )

= 4.7.54 - 30.11.2022 =
Fix: Incompatibility with WPML for translated downloads ( [#1144](https://github.com/WPChill/download-monitor/issues/1144) )

= 4.7.53 - 25.11.2022 =
Fix: Readlink error ( [#1142](https://github.com/WPChill/download-monitor/issues/1142) )

= 4.7.52 - 23.11.2022 =
Fix: Security fix

= 4.7.51 - 22.11.2022 =
Fix: Bug on reports when Download deleted ( [#1136](https://github.com/WPChill/download-monitor/issues/1136) )

= 4.7.5 - 22.11.2022 =
Fix: Installed extensions error - missing class
